# benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  PathConfig.h.in  README.md  boxes.cc  boxes.hh  boxes_description.ipynb  boxes_dt.cc  boxes_model_count.cc  boxes_model_count_results.ipynb  boxes_post_processing.py  boxes_results.ipynb  collide_spheres.cc  collide_spheres.hh  collide_spheres_dt.cc  csv_dictionary.py  entrypoint.sh  log.hh  package.xml  plot_helpers.py  post_processing.py  stack_boxes.cc  stack_boxes.hh  stack_boxes_inertial_test.cc  triball.cc  triball.hh  triball_configuration.cc  triball_description.ipynb  triball_sliding.cc
.github/: CODEOWNERS
benchmark_gazebo/: CMakeLists.txt  README.md  boxes.cc  boxes.hh  boxes.world.erb  boxes_5_complex.ogv  boxes_5_linear.world  boxes_5_nonlinear.world  boxes_5_simple.ogv  boxes_5_simple.world  boxes_description.ipynb  boxes_dt.cc  boxes_model_count.cc  csv_dictionary.py  package.xml  plot_helpers.py
benchmark_gazebo/test_results/: BENCHMARK_boxes_dt.csv  BENCHMARK_boxes_model_count.csv
benchmark_gazebo/tools/: TestMacro.cmake  junit_to_csv.rb  ogv_to_gif.bash
models/X1/: model.config  model.sdf
models/box010409/: model.config  model.sdf  model.sdf.erb
models/box010409_visual/: model.config  model.sdf  model.sdf.erb
models/boxes_right_angle/: model.config  model.sdf  model.sdf.erb
models/dzhanibekov/: model.config  model.sdf  model.sdf.erb
models/tetraball/: model.config  model.sdf  model.sdf.erb
models/triball/: model.config  model.sdf  model.sdf.erb
models/triball_fixed/: model.sdf  model.sdf.erb
models/x1_mu1/: model.config  model.sdf
models/x1_mu1_kpkd/: model.config  model.sdf
models/x1_mu1_kpkd_slip/: model.config  model.sdf
proto/: Accel.proto  Pose.proto  Quaternion.proto  Twist.proto  Vector3.proto  Wrench.proto  boxes_msg.pb.cc  boxes_msg.pb.h  boxes_msg.proto  triball_msg.proto
test_results/: BENCHMARK_boxes_dt.csv  BENCHMARK_boxes_dt20240702-140608.csv  BENCHMARK_boxes_dt20240702-162902.csv  BENCHMARK_boxes_dt_updated.csv  BENCHMARK_boxes_model_count.csv  BENCHMARK_boxes_model_count_updated.csv  BENCHMARK_stack_boxes_inertial_test_2024-03-17T14:33:19.csv
test_results/BENCHMARK_triball_configuration/MCAP/: triball_frictionModelpyramid_complex0_surfaceSlope0.1309_frictionCoefficient0.9_ode.mcap  triball_frictionModelpyramid_complex0_surfaceSlope0.261799_frictionCoefficient0.9_ode.mcap  triball_frictionModelpyramid_complex0_surfaceSlope0.392699_frictionCoefficient0.9_ode.mcap
tools/: TestMacro.cmake  check_test_ran.py  mcap_to_csv.py
tools/boxes/: mcap_to_csv.py
tools/triball/: mcap_to_csv.py
worlds/: boxes.world  boxes.world.erb  boxes_5_complex.world  boxes_5_simple.world  collide_spheres.world  collide_spheres.world.erb  dzhanibekov.world  dzhanibekov.world.erb  friction_cone.world  friction_pyramid.world  tetraball.world  tetraball.world.erb  triball.world  triball.world.erb  triball_contact.world  triball_contact.world.erb
